# 23-07Buck

./: 00BuckWorkspace.sublime-project  00BuckWorkspace.sublime-workspace  Barotrauma tutorial notes.txt  Cargo.toml  conversation.txt  todo.txt
ct0_async/: Cargo.toml
ct0_async/src/: main.rs
ct1_parse_godot_scene/: Cargo.toml  main.tscn
ct1_parse_godot_scene/src/: main.rs
test00-child/: Cargo.toml  ambient.toml
test00-child/src/: server.rs
test01-filter-scopes/: Cargo.toml
test01-filter-scopes/src/: main.rs
test02-parent-collider/: Cargo.toml  ambient.toml
test02-parent-collider/src/: server.rs
w00_3dof/: Cargo.toml  ambient.toml  asset-credits.txt
w00_3dof/assets/: pipeline.json  scorpio.glb
w00_3dof/src/: client.rs  server.rs
w01_hex/: Cargo.toml  ambient.toml
w01_hex/src/: client.rs  server.rs
w02-broughlike/: Cargo.toml  ambient.toml  devlog.txt
w02-broughlike/assets/: cactus plant block.glb  person figure.glb
w02-broughlike/blenders/: cactus plant block.blend  cactus plant block.blend1  cheap cactus.jfif  person figure.blend
w02-broughlike/src/: client.rs  server.rs
w03_ragna/: Cargo.toml  ambient.toml
w03_ragna/assets/: handmadeguy.pyxel
w03_ragna/assets/buildingside/: buildingside.blend  buildingside.blend1  buildingside.glb  buildingside_only.blend  buildingside_only.blend1
w03_ragna/assets/handmadeguy/: pipeline.toml
w03_ragna/src/: server.rs
w04_sceneloader/: Cargo.toml  ambient.toml  cubesSceneTest.tscn
w04_sceneloader/assets/: buildingside_only.glb
w04_sceneloader/src/: sceneloader.rs  server.rs
(+4 files in other folders)
